3525.	[func]		Support for additional signing algorithms in rndc:
			hmac-sha1, -sha224, -sha256, -sha384, and -sha512.
			The -A option to rndc-confgen can be used to
			select the algorithm for the generated key.
			(The default is still hmac-md5; this may
			change in a future release.) [RT #20363]

3524.	[func]		Added an alternate statistics channel in JSON format,
			when the server is built with the json-c library:
			http://[address]:[port]/json.  [RT #32630]

3523.	[contrib]	Ported filesystem and ldap DLZ drivers to
			dynamically-loadable modules, and added the
			"wildcard" module based on a contribution from
			Vadim Goncharov <vgoncharov@nic.ru>. [RT #23569]

3522.	[bug]		DLZ lookups could fail to return SERVFAIL when
			they ought to. [RT #32685]

3521.	[bug]		Address memory leak in opensslecdsa_link.c. [RT #32249]

3520.	[bug]		'mctx' was not being referenced counted in some places
			where it should have been.  [RT #32794]

3519.	[func]		Full replay protection via four-way handshake is
			now mandatory for rndc clients. Very old versions
			of rndc will no longer work. [RT #32798]

3518.	[bug]		Increase the size of dns_rrl_key.s.rtype by one bit
			so that all dns_rrl_rtype_t enum values fit regardless
			of whether it is teated as signed or unsigned by
			the compiler. [RT #32792]

3517.	[bug]		Reorder destruction to avoid shutdown race. [RT #32777]

3516.	[placeholder]

3515.	[port]		'%T' is not portable in strftime(). [RT #32763]

3514.	[bug]		The ranges for valid key sizes in ddns-confgen and
			rndc-confgen were too constrained. Keys up to 512
			bits are now allowed for most algorithms, and up
			to 1024 bits for hmac-sha384 and hmac-sha512.
			[RT #32753]

3513.	[func]		"dig -u" prints times in microseconds rather than
			milliseconds. [RT #32704]

3512.	[func]		"rndc validation check" reports the current status
			of DNSSEC validation. [RT #21397]

3511.	[doc]		Improve documentation of redirect zones. [RT #32756]
